<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="2dp"
    android:id="@+id/layout_id"
    android:background="@drawable/animation_layout"
    tools:context=".WelcomeActivity">
    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="220dp"
        android:layout_gravity="center"
        android:src="@drawable/welcomepic"
        android:layout_height="220dp"/>
    <Button
        android:layout_marginTop="10dp"
        android:layout_width="240dp"
        android:id="@+id/btnFourQueen"
        android:textSize="35sp"
        android:background="@drawable/button_layout"
        android:textAllCaps="false"
        android:text="@string/four_queen"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="240dp"
        android:textSize="35sp"
        android:background="@drawable/button_layout"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:id="@+id/btnEightQueen"
        android:text="@string/eight_queen"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="240dp"
        android:textSize="35sp"
        android:background="@drawable/button_layout"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:id="@+id/btnEightQueenInstruction"
        android:text="@string/instruction_rules"
        android:layout_height="wrap_content"/>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-7680645930614337/6506664064">
    </com.google.android.gms.ads.AdView>
</LinearLayout>