<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="2dp"
    android:background="#01E9FF"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="1dp"
            android:textSize="25sp"
            android:text="@string/win"
            android:textStyle="bold"
            android:textColor="#E600FF"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/textViewScoresuccess"
            android:layout_width="1dp"
            android:text="@string/win0"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="1dp"
            android:textSize="25sp"
            android:textColor="#FF0000"
            android:text="@string/tried"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/textViewScoretried"
            android:layout_width="1dp"
            android:text="@string/try0"
            android:textSize="25sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="2dp"
    android:paddingEnd="2dp"
    android:paddingStart="2dp"
    android:background="@color/colorPrimaryDark"
    android:orientation="horizontal"
    >
    <Button
        android:id="@+id/button_id_00"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:background="#000000"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_height="wrap_content"
        android:textSize="60sp"/>
    <Button
        android:id="@+id/button_id_01"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:background="#ffffff"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:textSize="60sp"/>
    <Button
        android:id="@+id/button_id_02"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:background="#000000"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_height="wrap_content"
        android:textSize="60sp"/>
    <Button
        android:id="@+id/button_id_03"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:background="#ffffff"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:textSize="60sp"/>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="2dp"
        android:paddingStart="2dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/button_id_10"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textSize="60sp"/>
        <Button
            android:id="@+id/button_id_11"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#000000"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textSize="60sp"/>
        <Button
            android:id="@+id/button_id_12"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textSize="60sp"/>
        <Button
            android:id="@+id/button_id_13"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#000000"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textSize="60sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="2dp"
        android:paddingStart="2dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/button_id_20"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#000000"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textSize="60sp"/>
        <Button
            android:id="@+id/button_id_21"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:textSize="60sp"/>
        <Button
            android:id="@+id/button_id_22"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#000000"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textSize="60sp"/>
        <Button
            android:id="@+id/button_id_23"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:textSize="60sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="2dp"
        android:paddingStart="2dp"
        android:paddingBottom="2dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/button_id_30"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textSize="60sp"/>
        <Button
            android:id="@+id/button_id_31"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#000000"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textSize="60sp"/>
        <Button
            android:id="@+id/button_id_32"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textSize="60sp"/>
        <Button
            android:id="@+id/button_id_33"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#000000"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textSize="60sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        >
        <TextView
            android:layout_width="0dp"
            android:textSize="30sp"
            android:textColor="#000000"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:text="@string/queenscount"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"/>
        <TextView
            android:id="@+id/queensCount_id_4"
            android:layout_width="0dp"
            android:textSize="30sp"
            android:textColor="#000000"
            android:text="@string/queens4"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>
        <Button
            android:id="@+id/btn_reset"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView1"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-7680645930614337/6506664064">
    </com.google.android.gms.ads.AdView>
</LinearLayout>